cli/tests/snapshot/inputs/errors/invalid_contract_expression.ncl
# capture = 'stderr'
# command = ['eval']
{ foo | Number -> [| 'Foo 5 |] = null }
